Closed Bug 513790 Opened 15 years ago Closed 15 years ago

TM: fix incorrect ARGSIZE_LO usages on x64

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
status1.9.2 --- beta1-fixed

People

(Reporter: dvander, Unassigned)

References

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

Attached patch patchSplinter Review
There are a few places we should be using ARGSIZE_P instead.
Attachment #397729 - Flags: review?(jorendorff)
Comment on attachment 397729 [details] [diff] [review] patch Nanojit now offers nicer ARGSIZE_ constants than when I originally wrote this. So please instead change it like this: >#define _JS_I32_ARGSIZE nanojit::ARGSIZE_I >#define _JS_I32_RETSIZE nanojit::ARGSIZE_I >#define _JS_F64_ARGSIZE nanojit::ARGSIZE_Q >#define _JS_F64_RETSIZE nanojit::ARGSIZE_Q >#define _JS_PTR_ARGSIZE nanojit::ARGSIZE_P >#define _JS_PTR_RETSIZE nanojit::ARGSIZE_P For bonus points remove the bogus distinction between ARGSIZE and RETSIZE. It looks like it's no longer needed. r=me with that.
Attachment #397729 - Flags: review?(jorendorff) → review+
Actually ... for that matter, we shouldn't use ARGSIZE_LO anywhere. Please change the remaining few to ARGSIZE_I.
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: