Fixed all ARGSIZE_LO usages to be ARGSIZE_P or ARGSIZE_I (bug 513790, r=jorendorff).